[package]
name = "blockchain-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.4"
rand = "0.8.5"
rust-crypto = "0.2.36"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
sha2 = "0.10.8"
thiserror = "1"
hex = "0.4.3"
hex-literal = "0.4.1"

